fix some problems on routes with android
